<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.stephnoutsa.bulksms.Home"
    tools:showIn="@layout/app_bar_home">

    <Button
        android:text="@string/send_messages"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addContact"
        android:layout_centerHorizontal="true"
        android:id="@+id/sendMessages"
        android:onClick="onClickSend" />

    <Button
        android:text="@string/add_contact"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/retrieveContacts"
        android:layout_centerHorizontal="true"
        android:id="@+id/addContact"
        android:onClick="onClickAdd" />

    <Button
        android:text="@string/retrieve_contacts"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/retrieveContacts"
        android:onClick="onClickRetrieve" />

    <Button
        android:text="@string/backup_contacts"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/retrieveContacts"
        android:layout_centerHorizontal="true"
        android:id="@+id/backupContacts"
        android:onClick="onClickBackup" />

</RelativeLayout>
